--- a/cinemaback/src/main/resources/application.properties
+++ b/cinemaback/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
+#for development
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#for docker-compose
+#spring.datasource.url=jdbc:postgresql://db:5432/postgres
+
+spring.datasource.username=postgres
+spring.datasource.password=student123
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
