--- a/cinemafront/package.json
+++ b/cinemafront/package.json
@@ -12,7 +12,10 @@
     "core-js": "^3.34.0",
     "roboto-fontface": "*",
     "vue": "^3.3.0",
-    "vuetify": "^3.0.0"
+    "vuetify": "^3.0.0",
+    "axios": "^1.6.5",
+    "vue-axios": "^3.5.2"
+
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
