--- a/cinemafront/package.json
+++ b/cinemafront/package.json
@@ -8,14 +8,15 @@
     "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@jamescoyle/vue-icon": "^0.1.2",
     "@mdi/font": "7.0.96",
+    "@mdi/js": "^7.4.47",
+    "axios": "^1.6.5",
     "core-js": "^3.34.0",
     "roboto-fontface": "*",
     "vue": "^3.3.0",
-    "vuetify": "^3.0.0",
-    "axios": "^1.6.5",
-    "vue-axios": "^3.5.2"
-
+    "vue-axios": "^3.5.2",
+    "vuetify": "^3.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
